--- a/src/app/docente/home/home.component.html
+++ b/src/app/docente/home/home.component.html
@@ -1,15 +1,17 @@
 <div class="min-h-screen bg-gray-100">
     <app-header></app-header>
     <div class="flex justify-center p-8">
-        <div class="grid gap-6 w-full max-w-screen-xl grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-            <app-card-group></app-card-group>
-            <app-card-group></app-card-group>
-            <app-card-group></app-card-group>
-            <app-card-group></app-card-group>
-            <app-card-group></app-card-group>
-            <app-card-group></app-card-group>
-            <app-card-group></app-card-group>
-            <app-card-group></app-card-group>
-        </div>
+      <!-- Contenedor de las tarjetas centrado con márgenes laterales -->
+      <div class="grid gap-10 w-full max-w-screen-lg grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
+        <!-- Tarjetas individuales -->
+        <app-card-group></app-card-group>
+        <app-card-group></app-card-group>
+        <app-card-group></app-card-group>
+        <app-card-group></app-card-group>
+        <app-card-group></app-card-group>
+        <app-card-group></app-card-group>
+        <app-card-group></app-card-group>
+        <app-card-group></app-card-group>
+      </div>
     </div>
-</div>
+  </div>  
