--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -8,7 +8,7 @@
         </svg>
       </button>
 
-      <img src="assets/logo.png" alt="App Logo" class="h-8 w-auto">
+      <img src="./logo-app.png" alt="App Logo" class="w-11 h-auto">
     </div>
   
     <div class="flex items-center space-x-4">
