--- a/src/app/alumno/home-alumno/home-alumno.component.html
+++ b/src/app/alumno/home-alumno/home-alumno.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen bg-gray-100">
-    <h1 class="bg-">Alumnos</h1>
+    <h1 class="text-center ">Alumnos</h1>
     <div class="flex justify-center p-8">
         <div class="grid gap-6 w-full max-w-screen-xl grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
             <app-card-grupos-alumno></app-card-grupos-alumno>
@@ -8,6 +8,9 @@
             <app-card-grupos-alumno></app-card-grupos-alumno>
             <app-card-grupos-alumno></app-card-grupos-alumno>
             <app-card-grupos-alumno></app-card-grupos-alumno>
+            <app-card-grupos-alumno></app-card-grupos-alumno>
+            <app-card-grupos-alumno></app-card-grupos-alumno>
         </div>
     </div>
+    <app-actividades-alumno></app-actividades-alumno>
 </div>
