--- a/src/app/docente/card-activity/card-activity.component.html
+++ b/src/app/docente/card-activity/card-activity.component.html
@@ -2,11 +2,11 @@
   <div class="w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6 relative">
     
     <div class="px-4 py-2 flex justify-between items-center rounded-lg">
-      <h3 class="text-lg font-semibold">Primer parcial</h3>
+      <h3 class="text-lg font-semibold text-[#00000099]">Primer parcial</h3>
     </div>
 
     <div class="p-4">
-      <p class="text-gray-600">Nombre actividad: Hola mundo</p>
+      <p class="text-black font-semibold">Nombre actividad: Hola mundo</p>
     </div>
 
     <div class="absolute bottom-4 right-4">
