--- a/src/app/docente/card-group/card-group.component.html
+++ b/src/app/docente/card-group/card-group.component.html
@@ -1,4 +1,4 @@
-<div class="w-full max-w-xs bg-white rounded-lg shadow-md overflow-hidden relative">
+<div class="bg-white rounded-lg shadow-md overflow-hidden relative">
     <div class="bg-[#004C4C] text-white px-4 py-2 flex justify-between items-center">
       <h3 class="text-lg font-semibold">{{ subjectName }}</h3>
     </div>
