--- a/src/app/docente/home-docente/home-docente.component.html
+++ b/src/app/docente/home-docente/home-docente.component.html
@@ -1,6 +1,6 @@
 <div class="min-h-screen bg-gray-100">
     <div class="flex justify-center p-8">
-      <div class="grid gap-10 w-full max-w-screen-lg grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
+      <div class="grid gap-8 w-full grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
 
         <app-card-group></app-card-group>
         <app-card-group></app-card-group>
