--- a/src/app/docente/view-group/view-group.component.html
+++ b/src/app/docente/view-group/view-group.component.html
@@ -2,7 +2,7 @@
 <div class="flex flex-col items-center p-6">
     
     <div class="flex items-center justify-between w-10/12 px-6 py-3">
-        <p class="text-xl font-semibold text-gray-700">Actividades</p>
+        <p class="text-xl font-semibold text-[#004C4C]">Actividades</p>
         <button class="text-[#004C4C] text-lg font-semibold hover:underline">+ Crear</button>
     </div>
 
