--- a/src/app/layout/header-group/header-group.component.html
+++ b/src/app/layout/header-group/header-group.component.html
@@ -1,4 +1,4 @@
-<div class="w-full text-gray-500 py-4 px-6 flex items-center justify-evenly shadow-md">
+<div class="w-full text-gray-500 py-4 px-6 flex items-center justify-around shadow-md">
 
   <div class="flex items-center space-x-2">
     <h1 class="text-xl font-semibold whitespace-nowrap overflow-hidden overflow-ellipsis">Matematicas I</h1>
@@ -6,12 +6,10 @@
       <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
     </svg>
   </div>
-  
-  <div class="flex w-full justify-evenly space-x-6">
+
     <button class="text-[#004C4C] hover:underline">Actividades</button>
     <button class="text-[#004C4C] hover:underline">Temario</button>
     <button class="text-[#004C4C] hover:underline">Alumnos</button>
     <img src="./ia_logo_chip.png" alt="Logo IA" class="h-8 w-auto"/>
-  </div>
 
 </div>
