--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,28 +1,28 @@
-<div class="flex items-center justify-between p-4 bg-black text-white">
+<div class="flex items-center justify-between px-4 py-2 bg-black text-white">
+  <div class="flex items-center">
+    <button class="p-2 text-teal-500 hover:text-teal-700 focus:outline-none">
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+      </svg>
+    </button>
+    <img src="/logo-complet.png" alt="Brainiacs Logo" class="w-[156px] h-[68px]">
+  </div>
 
-    <div class="flex items-center space-x-4">
+  <div class="flex items-center space-x-4">
+    <button 
+      (click)="toggleAddButton()" 
+      [ngClass]="{ 'bg-teal-600 rounded-full text-white w-8 h-8 flex items-center justify-center': isClicked }"
+      class="text-teal-600 hover:text-teal-800 focus:outline-none transition-all duration-200"
+    >
+      <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+      </svg>
+    </button>
 
-      <button class="p-2 text-white hover:text-gray-300 focus:outline-none">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
-
-      <img src="./logo-app.png" alt="App Logo" class="w-1/4 h-auto">
-    </div>
-  
-    <div class="flex items-center space-x-4">
-
-      <button class="p-2 bg-teal-500 rounded-full text-white hover:bg-teal-600 focus:outline-none">
-        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-        </svg>
-      </button>
-
-      <div class="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center">
-        <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
-        </svg>
-      </div>
+    <div class="w-8 h-8 bg-teal-600 rounded-full flex items-center justify-center hover:bg-teal-700">
+      <svg class="w-6 h-6 text-black" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+      </svg>
     </div>
   </div>
+</div>
