--- a/src/app/alumno/actividades-alumno/card-act/card-act.component.html
+++ b/src/app/alumno/actividades-alumno/card-act/card-act.component.html
@@ -1,18 +1,20 @@
 <div class="p-4">
-    <div class="w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6 relative">
-      
-      <div class="px-4 py-2 flex justify-between items-center rounded-lg">
-        <h3 class="text-lg font-semibold text-[#00000099]">Primer parcial</h3>
-      </div>
-  
-      <div class="p-4">
-        <p class="text-black font-semibold">Nombre actividad: Hola mundo</p>
-      </div>
-  
-      <div class="absolute bottom-4 right-4">
-        <button class="text-gray-400 hover:text-gray-600">
-          <img src="./menu_1.png" alt="menu de opciones" class="w-auto h-8">
-        </button>
-      </div>
+  <div class="w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6 relative cursor-pointer"
+       (click)="openModal({name: 'Primer parcial', description: 'Descripción de la actividad: Hola Mundo'})">
+    
+    <div class="px-4 py-2 flex justify-between items-center rounded-lg">
+      <h3 class="text-lg font-semibold text-[#00000099]">Primer parcial</h3>
+    </div>
+
+    <div class="p-4">
+      <p class="text-black font-semibold">Nombre actividad: Hola mundo</p>
     </div>
   </div>
+</div>
+
+<app-actividad-modal 
+  *ngIf="isModalVisible"  
+  [activityDetails]="activity" 
+  (close)="closeModal()"
+  (submitActivity)="handleSubmitActivity($event)">
+</app-actividad-modal>
