add view group and temario

--- a/src/app/docente/view-group/view-group.component.html
+++ b/src/app/docente/view-group/view-group.component.html
@@ -1,16 +1,5 @@
 <app-header-group class="w-full"></app-header-group>
 <div class="flex flex-col items-center p-6">
-    
-    <div class="flex items-center justify-between w-10/12 px-6 py-3">
-        <p class="text-xl font-semibold text-[#004C4C]">Actividades</p>
-        <button class="text-[#004C4C] text-lg font-semibold hover:underline">+ Crear</button>
-    </div>
-
-    <div class="w-10/12">
-        <app-card-activity class="w-full"></app-card-activity>
-        <app-card-activity class="w-full"></app-card-activity>
-        <app-card-activity class="w-full"></app-card-activity>
-        <app-card-activity class="w-full"></app-card-activity>
-    </div>
-
+   <app-view-activity class="w-full"></app-view-activity> 
+   <app-view-temario class="w-full"></app-view-temario>
 </div>
