--- a/src/app/docente/view-group/view-group.component.html
+++ b/src/app/docente/view-group/view-group.component.html
@@ -1,5 +1,6 @@
-<app-header-group class="w-full"></app-header-group>
+<app-header-group class="w-full" (viewSelected)="onViewSelected($event)"></app-header-group>
 <div class="flex flex-col items-center p-6">
-   <app-view-activity class="w-full"></app-view-activity> 
-   <app-view-temario class="w-full"></app-view-temario>
+   <app-view-activity *ngIf="selectedView === 'activity'" class="w-full"></app-view-activity>
+   <app-view-temario *ngIf="selectedView === 'temario'" class="w-full"></app-view-temario>
+   <app-view-alumnos *ngIf="selectedView === 'alumnos'" class="w-full"></app-view-alumnos>
 </div>
