--- a/src/app/docente/view-group/view-temario/card-temario/card-temario.component.html
+++ b/src/app/docente/view-group/view-temario/card-temario/card-temario.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6 relative">
+<div class="w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6 relative mb-4">
     <div class="p-4">
         <p class="text-black font-semibold">Temario: parcial {{"1"}}</p>
     </div>
