--- a/src/app/layout/header-group/header-group.component.html
+++ b/src/app/layout/header-group/header-group.component.html
@@ -7,9 +7,9 @@
     </svg>
   </div>
 
-    <button class="text-[#004C4C] hover:underline">Actividades</button>
-    <button class="text-[#004C4C] hover:underline">Temario</button>
-    <button class="text-[#004C4C] hover:underline">Alumnos</button>
+    <button (click)="selectView('activity')" class="text-[#004C4C] hover:underline">Actividades</button>
+    <button (click)="selectView('temario')" class="text-[#004C4C] hover:underline">Temario</button>
+    <button (click)="selectView('alumnos')" class="text-[#004C4C] hover:underline">Alumnos</button>
     <img src="./ia_logo_chip.png" alt="Logo IA" class="h-8 w-auto"/>
 
 </div>
