--- a/src/app/alumno/estudiantes-alumnos/estudiantes-alumnos.component.html
+++ b/src/app/alumno/estudiantes-alumnos/estudiantes-alumnos.component.html
@@ -1,1 +1,12 @@
-<p>estudiantes-alumnos works!</p>
+<app-nav-act class="w-full"></app-nav-act>
+<div class="flex flex-col items-center p-6">
+    
+    <div class="flex items-center justify-between w-10/12 px-6 py-3">
+        <p class="text-xl font-semibold text-[#004C4C]">Alumnos</p>
+    </div>
+
+    <div class="w-10/12">
+        <app-card-alum class="w-full"></app-card-alum>
+    </div>
+
+</div>
