--- a/src/app/alumno/temario-alumno/temario-alumno.component.html
+++ b/src/app/alumno/temario-alumno/temario-alumno.component.html
@@ -1,1 +1,14 @@
-<p>temario-alumno works!</p>
+<app-nav-act class="w-full"></app-nav-act>
+<div class="flex flex-col items-center p-6">
+    <div class="flex flex-col items-start w-10/12 px-6 py-3">
+        <p class="text-2xl font-semibold text-[#004C4C] mb-2">Temario</p>
+       <p class="text-lg font-medium px-6 text-[#004C4C]">Parcial 1</p>
+    </div>
+    
+    <div class="w-full flex flex-col items-center">
+        <app-card-tem class="w-10/12 mb-4"></app-card-tem>
+        <app-card-tem class="w-10/12 mb-4"></app-card-tem>
+        <app-card-tem class="w-10/12 mb-4"></app-card-tem>
+        <app-card-tem class="w-10/12 mb-4"></app-card-tem>
+    </div>
+</div>
