--- a/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
+++ b/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
@@ -1,9 +1,10 @@
 <div class="flex flex-col items-center w-full">
-    <div class="flex items-center justify-between w-10/12 px-6 py-3">
-      <p class="text-xl font-semibold text-[#004C4C]">Alumnos</p>
-    </div>
-  
-    <div class="w-10/12 space-y-4">
-        <app-card-alumno></app-card-alumno>
-    </div>
+  <div class="flex items-center justify-between w-10/12 px-6 py-3">
+    <p class="text-xl font-semibold text-[#004C4C]">Alumnos</p>
+  </div>
+
+  <div class="w-10/12 space-y-4">
+    <app-generic-card [cardData]="alumnos" cardType="alumno" class="w-full"></app-generic-card>
+  </div>  
+
 </div>
