--- a/src/app/docente/view-group/modal-view-activity/modal-view-activity.component.html
+++ b/src/app/docente/view-group/modal-view-activity/modal-view-activity.component.html
@@ -3,7 +3,7 @@
 
         <div class="flex justify-start items-start mt-8">
             <img src="/hacer-alt.png" alt="Tareas" class="w-10 h-10">
-            <h2 class="text-2xl font-semibold text-teal-800 ml-4">{{ activityDetails?.name }}</h2>
+            <h2 class="text-2xl font-semibold text-teal-800 ml-4">{{ activityDetails?.title }}</h2>
           </div>
           
       <p class="text-gray-500 text-sm mt-4">Fecha Entrega: {{ activityDetails?.dueDate | date:'dd/MM/yyyy' }}</p>
