--- a/src/app/docente/view-group/view-activity/view-activity.component.html
+++ b/src/app/docente/view-group/view-activity/view-activity.component.html
@@ -1,11 +1,23 @@
-<!-- view-activity -->
 <div class="flex flex-col items-center w-full">
   <div class="flex items-center justify-between w-10/12 px-6 py-3">
     <p class="text-xl font-semibold text-[#004C4C]">Actividades</p>
     <button class="text-[#004C4C] text-lg font-semibold hover:underline">+ Crear</button>
   </div>
-  
-  <div class="w-10/12 space-y-4">
-    <app-generic-card *ngFor="let activity of activities" [cardData]="activity" cardType="activity" class="w-full mb-4"></app-generic-card>
-  </div>  
+
+<div class="w-10/12 space-y-4">
+  <app-generic-card 
+    *ngFor="let activity of activities" 
+    [cardData]="activity" 
+    cardType="activity" 
+    (openModal)="openActivityModal(activity)">
+  </app-generic-card>
+</div>
+
+<app-modal-view-activity 
+  *ngIf="isModalOpen" 
+  [activityDetails]="selectedActivity" 
+  (close)="closeActivityModal()"
+>
+</app-modal-view-activity>
+
 </div>
