Add card group and activity a sahred

--- a/src/app/docente/view-group/view-activity/view-activity.component.html
+++ b/src/app/docente/view-group/view-activity/view-activity.component.html
@@ -13,11 +13,11 @@
   </app-generic-card>
 </div>
 
-<app-modal-view-activity 
-  *ngIf="isModalOpen" 
-  [activityDetails]="selectedActivity" 
+<app-card-activity
+  *ngIf="isModalOpen"
+  [activityDetails]="selectedActivity"
+  userType="docente"
   (close)="closeActivityModal()"
->
-</app-modal-view-activity>
+></app-card-activity>
 
 </div>
