Add: Card Styles

--- a/src/app/alumno/actividades-alumno/actividades-alumno.component.html
+++ b/src/app/alumno/actividades-alumno/actividades-alumno.component.html
@@ -1,8 +1,8 @@
 <app-nav-act class="w-full"></app-nav-act>
-<div class="flex flex-col items-center p-6">
+<div class="flex flex-col items-center p-4">
     
     <div class="flex items-center justify-between w-10/12 px-6 py-3">
-        <p class="text-xl font-semibold text-[#004C4C]">Actividades</p>
+        <p class="text-3xl font-semibold text-[#004C4C]">Actividades</p>
     </div>
 
     <div class="w-10/12">
