--- a/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
+++ b/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
@@ -1,9 +1,10 @@
-<div class="flex flex-col items-center w-full">
-  <div class="flex items-center justify-between w-10/12 px-6 py-3">
-    <p class="text-xl font-semibold text-[#004C4C]">Alumnos</p>
+<div class="flex flex-col items-center w-full p-6">
+  <div class="flex items-center justify-between w-10/12 pb-6">
+    <p class="text-3xl font-bold text-[#004C4C]">Alumnos</p>
+    <button class="text-[#004C4C] text-lg font-semibold hover:underline">+ Agregar</button>
   </div>
 
-  <div class="w-10/12 space-y-4">
+<div class="w-10/12">
     <app-generic-card [cardData]="alumnos" cardType="alumno" class="w-full"></app-generic-card>
   </div>  
 
