--- a/src/app/docente/view-group/view-group.component.html
+++ b/src/app/docente/view-group/view-group.component.html
@@ -1,5 +1,5 @@
 <app-header-group class="w-full" (viewSelected)="onViewSelected($event)"></app-header-group>
-<div class="flex flex-col items-center p-6">
+<div class="flex flex-col items-center">
    <app-view-activity *ngIf="selectedView === 'activity'" class="w-full"></app-view-activity>
    <app-view-temario *ngIf="selectedView === 'temario'" class="w-full"></app-view-temario>
    <app-view-alumnos *ngIf="selectedView === 'alumnos'" class="w-full"></app-view-alumnos>
