--- a/src/app/docente/view-group/view-temario/view-temario.component.html
+++ b/src/app/docente/view-group/view-temario/view-temario.component.html
@@ -1,11 +1,23 @@
-<div class="flex flex-col items-center w-full">
+<div class="flex flex-col items-center p-4">
   <div class="flex items-center justify-between w-10/12 px-6 py-3">
-    <p class="text-xl font-semibold text-[#004C4C]">Temario</p>
-    <button class="text-[#004C4C] text-lg font-semibold hover:underline">+ Crear</button>
+    <div>
+      <p class="text-3xl font-bold text-[#004C4C] mb-2">Temario</p>
+      <p class="text-2xl font-semibold px-6 text-[#008081]">Parcial 1</p>
+    </div>
+
+    <button 
+      class="text-[#004C4C] text-lg font-semibold hover:underline" 
+      >
+      + Crear
+    </button>
   </div>
 
-  <div class="w-10/12 space-y-4">
-    <app-generic-card *ngFor="let temario of temarios" [cardData]="temario" cardType="temario" class="w-full"></app-generic-card>
+  <div class="w-10/12">
+    <app-generic-card 
+      *ngFor="let temario of temarios" 
+      [cardData]="temario" 
+      cardType="temario" 
+      class="w-full">
+    </app-generic-card>
   </div>  
-
 </div>
