modasl-menu have a bug

--- a/src/app/shared/cards/card-group/card-group.component.html
+++ b/src/app/shared/cards/card-group/card-group.component.html
@@ -11,5 +11,11 @@
         <img class="h-8" src="./menu_1.png" alt="Menú de opciones" />
       </button>
     </div>
+    
+    <app-menu-modals
+      *ngIf="showModal"
+      (closeModal)="showModal = false"
+      (optionSelected)="handleOption($event)">
+    </app-menu-modals>  
   </div>
 </div>
