--- a/src/app/shared/modals/menu-modals/menu-modals.component.html
+++ b/src/app/shared/modals/menu-modals/menu-modals.component.html
@@ -1,14 +1,25 @@
-<div *ngIf="showModal" class="bg-white shadow-lg rounded-lg w-48 p-4">
-    <h3 class="text-lg font-semibold mb-4">Opciones</h3>
-    <ul>
-      <li>
-        <button (click)="onOptionClick('inspect')" class="w-full text-left py-2 px-4 hover:bg-gray-100">Inspeccionar</button>
-      </li>
-      <li>
-        <button (click)="onOptionClick('edit')" class="w-full text-left py-2 px-4 hover:bg-gray-100">Editar</button>
-      </li>
-      <li>
-        <button (click)="onOptionClick('delete')" class="w-full text-left py-2 px-4 text-red-500 hover:bg-red-100">Eliminar</button>
-      </li>
-    </ul>
-  </div>
+<div class="bg-white shadow-lg rounded-lg w-48 p-4 absolute top-0 right-0 mt-2 mr-2 z-50">
+  <button (click)="closeModalPopup()" class="absolute top-2 right-2 text-gray-400 hover:text-gray-600">
+    <span class="text-xl">&times;</span>
+  </button>
+  <ul>
+    <li>
+      <button (click)="onOptionClick('inspect')" class="w-full text-left py-2 px-4 hover:bg-gray-100">
+        <img src="inspect.png" alt="Inspeccionar" class="inline-block mr-2 h-5" />
+        Inspeccionar
+      </button>
+    </li>
+    <li>
+      <button (click)="onOptionClick('edit')" class="w-full text-left py-2 px-4 hover:bg-gray-100">
+        <img src="edit.png" alt="Editar" class="inline-block mr-2 h-5" />
+        Editar
+      </button>
+    </li>
+    <li>
+      <button (click)="onOptionClick('delete')" class="w-full text-left py-2 px-4 text-red-500 hover:bg-red-100">
+        <img src="delete.png" alt="Eliminar" class="inline-block mr-2 h-5" />
+        Eliminar
+      </button>
+    </li>
+  </ul>
+</div>
