--- a/src/app/shared/cards/card-group/card-group.component.html
+++ b/src/app/shared/cards/card-group/card-group.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white rounded-lg shadow-md overflow-hidden relative">
+<div class="bg-white rounded-lg shadow-md relative">
   <div class="bg-[#004C4C] text-white px-4 py-2 flex justify-between items-center">
     <h3 class="text-lg font-semibold">{{ subjectName }}</h3>
   </div>
@@ -11,7 +11,7 @@
         <img class="h-8" src="./menu_1.png" alt="Menú de opciones" />
       </button>
     </div>
-    
+
     <app-menu-modals
       *ngIf="showModal"
       (closeModal)="showModal = false"
