--- a/src/app/shared/modals/menu-modals/menu-modals.component.html
+++ b/src/app/shared/modals/menu-modals/menu-modals.component.html
@@ -1,8 +1,11 @@
-<div class="bg-white shadow-lg rounded-lg w-48 p-4 absolute top-0 right-0 mt-2 mr-2 z-50">
-  <button (click)="closeModalPopup()" class="absolute top-2 right-2 text-gray-400 hover:text-gray-600">
+<div
+  class="bg-white shadow-lg rounded-lg w-48 p-4 absolute left-[58%] transform translate-y-full z-50">
+  
+  <button (click)="closeModalPopup()" class="absolute -top-3 right-1 text-gray-400 hover:text-red-600 p-2">
     <span class="text-xl">&times;</span>
   </button>
-  <ul>
+
+  <ul class="mt-2">
     <li>
       <button (click)="onOptionClick('inspect')" class="w-full text-left py-2 px-4 hover:bg-gray-100">
         <img src="inspect.png" alt="Inspeccionar" class="inline-block mr-2 h-5" />
