refactor(cards): usar módulo shared para simplificar la estructura de las cards

--- a/src/app/alumno/home-alumno/home-alumno.component.html
+++ b/src/app/alumno/home-alumno/home-alumno.component.html
@@ -1,13 +1,7 @@
 <div class="min-h-screen bg-gray-100">
-    <div class="min-h-screen bg-gray-100">
-        <div class="flex justify-center p-8">
-          <div class="grid gap-8 w-full grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">    
-            <app-card-grupos-alumno></app-card-grupos-alumno>
-            <app-card-grupos-alumno></app-card-grupos-alumno>
-            <app-card-grupos-alumno></app-card-grupos-alumno>
-            <app-card-grupos-alumno></app-card-grupos-alumno>
-            <app-card-grupos-alumno></app-card-grupos-alumno>
-            <app-card-grupos-alumno></app-card-grupos-alumno>
-            <app-card-grupos-alumno></app-card-grupos-alumno>
-            <app-card-grupos-alumno></app-card-grupos-alumno>
-        </div>
+  <div class="flex justify-center p-8">
+    <div class="grid gap-8 w-full grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
+      <app-card-group subjectName="Ciencias II" userType="alumno"></app-card-group>
+    </div>
+  </div>
+</div>
