--- a/src/app/shared/layout/header-group/header-group.component.html
+++ b/src/app/shared/layout/header-group/header-group.component.html
@@ -8,9 +8,9 @@
     </svg>
   </div>
 
-    <button (click)="selectView('activity')" class="text-[#004C4C] hover:underline">Actividades</button>
-    <button (click)="selectView('temario')" class="text-[#004C4C] hover:underline">Temario</button>
-    <button (click)="selectView('alumnos')" class="text-[#004C4C] hover:underline">Alumnos</button>
-    <img src="./ia_logo_chip.png" alt="Logo IA" class="h-8 w-auto"/>
+  <button (click)="selectView('activity')" class="text-[#004C4C] hover:underline">Actividades</button>
+  <button (click)="selectView('temario')" class="text-[#004C4C] hover:underline">Temario</button>
+  <button (click)="selectView('alumnos')" class="text-[#004C4C] hover:underline">Alumnos</button>
+  <img *ngIf="userType !== 'alumno'" src="./ia_logo_chip.png" alt="Logo IA" class="h-8 w-auto"/>
 
 </div>
