add color login and border cards

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="p-10 w-full sm:w-1/3">
     <div class="flex items-center justify-center space-x-4 mb-8">
       <img src="./logo.png" alt="Brainacs Logo" class="w-1/4 h-auto" />
-      <h2 class="text-6xl font-semibold">Brainiacs</h2>
+      <h2 class="text-6xl font-semibold text-[#4DE3D8]">Brainiacs</h2>
     </div>
     <div>
       <form (submit)="onSubmit()" class="space-y-6 p-8 rounded-lg bg-[#B2D9D8] w-full">
