--- a/src/app/shared/cards/card-group/card-group.component.html
+++ b/src/app/shared/cards/card-group/card-group.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white rounded-lg shadow-md relative">
   <div 
-    class="bg-[#004C4C] cursor-pointer text-white px-4 py-2 flex justify-between items-center"
+    class="bg-[#004C4C] cursor-pointer text-white px-4 py-2 flex justify-between items-center rounded-t-lg"
     [ngClass]="{'cursor-pointer': userType === 'alumno'}"
     (click)="userType === 'alumno' && navigateToDetail()">
     <h3 class="text-lg font-semibold">{{ subjectName }}</h3>
