Connected view groups

--- a/src/app/docente/home-docente/home-docente.component.html
+++ b/src/app/docente/home-docente/home-docente.component.html
@@ -1,7 +1,11 @@
 <div class="min-h-screen bg-gray-100">
   <div class="flex justify-center p-8">
     <div class="grid gap-8 w-full grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-      <app-card-group subjectName="Ciencias II" userType="docente"></app-card-group>
+      <app-card-group 
+        *ngFor="let group of groups"
+        [subjectName]="group.asignatura"
+        [userType]="'docente'"
+      ></app-card-group>
     </div>
   </div>
 </div>
