--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,8 +1,8 @@
 <div>
-  <div *ngIf="role === 'docente'">
+  <div *ngIf="rol === 'docente'">
     <app-home-docente></app-home-docente>
   </div>
-  <div *ngIf="role === 'alumno'">
+  <div *ngIf="rol === 'alumno'">
     <app-home-alumno></app-home-alumno>
   </div>
 </div>
