--- a/src/app/shared/modals/menu-modals/menu-modals.component.html
+++ b/src/app/shared/modals/menu-modals/menu-modals.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-white shadow-lg rounded-lg w-48 p-4 absolute left-[58%] transform translate-y-full z-50">
+  class="bg-white shadow-lg rounded-lg w-48 p-4 absolute left-[58%] transform translate-y-1/2 z-50">
   
   <button (click)="closeModalPopup()" class="absolute -top-3 right-1 text-gray-400 hover:text-red-600 p-2">
     <span class="text-xl">&times;</span>
