connected : Group,AddGropu

--- a/src/app/docente/home-docente/home-docente.component.html
+++ b/src/app/docente/home-docente/home-docente.component.html
@@ -5,6 +5,8 @@
         *ngFor="let group of groups"
         [subjectName]="group.asignatura"
         [userType]="'docente'"
+        [grado]="group.grado"     
+        [grupo]="group.grupo"
       ></app-card-group>
     </div>
   </div>
