--- a/src/app/shared/cards/card-group/card-group.component.html
+++ b/src/app/shared/cards/card-group/card-group.component.html
@@ -3,12 +3,15 @@
     class="bg-[#004C4C] cursor-pointer text-white px-4 py-2 flex justify-between items-center rounded-t-lg"
     [ngClass]="{'cursor-pointer': userType === 'alumno'}"
     (click)="userType === 'alumno' && navigateToDetail()">
-    <h3 class="text-lg font-semibold">{{ subjectName }}</h3>
+    <h3 class="text-lg font-semibold">
+      {{ subjectName }} 
+      <span *ngIf="grado && grupo" class="ml-2 text-lg font-semibold">
+        {{ grado }} - {{ grupo }}
+      </span>
+    </h3>
   </div>
 
   <div class="p-4 relative min-h-[200px] rounded-b-lg">
-    <p class="text-gray-600">Contenido de la tarjeta.</p>
-
     <div *ngIf="userType === 'director' || userType === 'docente'" class="absolute bottom-4 right-4">
       <button (click)="toggleModal()" class="text-gray-400 hover:text-gray-600">
         <img class="h-8" src="./menu_1.png" alt="Menú de opciones" />
