--- a/src/app/shared/modals/form-add-modal/form-add-modal.component.html
+++ b/src/app/shared/modals/form-add-modal/form-add-modal.component.html
@@ -1,28 +1,7 @@
 <div *ngIf="modalOpen" class="fixed inset-0 bg-gray-600 bg-opacity-50 flex justify-center items-center">
-  <div class="w-[600px] h-[auto] mx-auto bg-white p-8 rounded-lg shadow-md">
-    <h2 class="text-2xl font-semibold text-[#004C4C] mb-6 text-left">
-      Agregar nuevo grupo
-    </h2>
-    <form>
-      <div class="mb-4">
-        <label for="asignatura" class="block text-gray-700 font-medium mb-2">Asignatura</label>
-        <input type="text" id="asignatura" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Ingrese la asignatura">
-      </div>
-
-      <div class="mb-4">
-        <label for="grado" class="block text-gray-700 font-medium mb-2">Grado</label>
-        <input type="text" id="grado" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Ingrese el grado">
-      </div>
-
-      <div class="mb-6">
-        <label for="grupo" class="block text-gray-700 font-medium mb-2">Grupo</label>
-        <input type="text" id="grupo" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Ingrese el grupo">
-      </div>
-
-      <div class="flex justify-between">
-        <button type="submit" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838] mr-2">Aceptar</button>
-        <button type="button" (click)="closeModal()" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838]">Cancelar</button>
-      </div>
-    </form>
+    <div [ngSwitch]="modalType">
+      <app-add-group *ngSwitchCase="'group'" ></app-add-group>
+      <app-add-tarea *ngSwitchCase="'tarea'" ></app-add-tarea>
+      <div *ngSwitchDefault>Selecciona una opción válida</div>
+    </div>
   </div>
-</div>
