ADD MODULE DIRECTOR

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,4 +5,7 @@
   <div *ngIf="rol === 'alumno'">
     <app-home-alumno></app-home-alumno>
   </div>
+  <div *ngIf="rol === 'director'">
+    <app-home-director></app-home-director>
+  </div>
 </div>
