--- a/src/app/docente/forms/add-tarea/add-tarea.component.html
+++ b/src/app/docente/forms/add-tarea/add-tarea.component.html
@@ -1,26 +1,37 @@
 <div class="w-[600px] h-[auto] mx-auto bg-white p-8 rounded-lg shadow-md">
-    <h2 class="text-2xl font-semibold text-[#004C4C] mb-6 text-left">
-      Agregar nuevo grupo
-    </h2>
-    <form>
-      <div class="mb-4">
-        <label for="asignatura" class="block text-gray-700 font-medium mb-2">Asignatura</label>
-        <input type="text" id="asignatura" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Ingrese la asignatura">
-      </div>
+  <div class="flex justify-center mb-6">
+    <img src="/tarea.png" alt="Imagen ilustrativa" class="w-auto h-[80px] object-contain">
+  </div>
 
-      <div class="mb-4">
-        <label for="grado" class="block text-gray-700 font-medium mb-2">Grado</label>
-        <input type="text" id="grado" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Ingrese el grado">
-      </div>
+  <h2 class="text-2xl font-semibold text-[#004C4C] mb-6 text-justify">
+    Añadir detalles de la nueva tarea
+  </h2>
 
-      <div class="mb-6">
-        <label for="grupo" class="block text-gray-700 font-medium mb-2">Grupo</label>
-        <input type="text" id="grupo" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Ingrese el grupo">
-      </div>
+  <form class="space-y-6 border border-[#004C4C99] p-6 rounded-lg mb-6">
+    <div class="mb-4">
+      <label for="tema" class="block text-gray-700 font-medium mb-2">Tema</label>
+      <input type="text" id="tema" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Ingrese el tema">
+    </div>
 
-      <div class="flex justify-between">
-        <button type="submit" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838] mr-2">Aceptar</button>
-        <button type="button" (click)="closeModal()" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838]">Cancelar</button>
-      </div>
-    </form>
+    <div class="mb-4">
+      <label for="subtema" class="block text-gray-700 font-medium mb-2">Subtema</label>
+      <input type="text" id="subtema" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Ingrese el subtema">
+    </div>
+
+    <div class="mb-4">
+      <label for="descripcion" class="block text-gray-700 font-medium mb-2">Descripción</label>
+      <textarea id="descripcion" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C] resize-none" placeholder="Ingrese la descripción"></textarea>
+    </div>
+
+    <div class="mb-4">
+      <button type="button" class="w-full bg-[#D1E8E8] text-[#004C4C] font-semibold py-2 px-4 rounded-lg hover:bg-[#A9D0D0]" (click)="onAddContent()">
+        Agregar contenido
+      </button>
+    </div>
+  </form>
+
+  <div class="flex justify-between">
+    <button type="submit" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838] mr-2">Subir</button>
+    <button type="button" (click)="closeModal()" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838]">Cancelar</button>
+  </div>
 </div>
