--- a/src/app/shared/cards/card-group/card-group.component.html
+++ b/src/app/shared/cards/card-group/card-group.component.html
@@ -23,5 +23,7 @@
       (closeModal)="showModal = false"
       (optionSelected)="handleOption($event)">
     </app-menu-modals>  
+    
+    <app-delete-modal *ngIf="modalOpen" (close)="closeDeleteModal()"></app-delete-modal>
   </div>
 </div>
