--- a/src/app/docente/view-group/view-activity/view-activity.component.html
+++ b/src/app/docente/view-group/view-activity/view-activity.component.html
@@ -1,23 +1,26 @@
 <div class="flex flex-col items-center w-full p-6">
   <div class="flex items-center justify-between w-10/12 pb-6">
     <p class="text-3xl font-bold text-[#004C4C]">Actividades</p>
-    <button class="text-[#004C4C] text-lg font-semibold hover:underline">+ Crear</button>
+    <button class="flex items-center text-[#004C4C] text-2xl font-semibold" (click)="onAddTarea()">
+      <img src="/create.png" alt="Crear" class="w-5 h-5 mr-2"> Crear
+    </button>
   </div>
 
-<div class="w-10/12">
-  <app-generic-card 
-    *ngFor="let activity of activities" 
-    [cardData]="activity" 
-    cardType="activity" 
-    (openModal)="openActivityModal(activity)">
-  </app-generic-card>
-</div>
+  <div class="w-10/12">
+    <app-generic-card 
+      *ngFor="let activity of activities" 
+      [cardData]="activity" 
+      cardType="activity" 
+      (openModal)="openActivityModal(activity)">
+    </app-generic-card>
+  </div>
 
-<app-card-activity
-  *ngIf="isModalOpen"
-  [activityDetails]="selectedActivity"
-  userType="docente"
-  (close)="closeActivityModal()"
-></app-card-activity>
+  <app-card-activity
+    *ngIf="isModalOpen"
+    [activityDetails]="selectedActivity"
+    userType="docente"
+    (close)="closeActivityModal()">
+  </app-card-activity>
 
+  <app-form-add-modal></app-form-add-modal>
 </div>
