--- a/src/app/docente/home-docente/home-docente.component.html
+++ b/src/app/docente/home-docente/home-docente.component.html
@@ -7,6 +7,7 @@
         [userType]="'docente'"
         [grado]="group.grado"     
         [grupo]="group.grupo"
+        [groupId]="group.id_grupo"
       ></app-card-group>
     </div>
   </div>
