add: conexion con la api

--- a/src/app/alumno/view-group-alumn/act-alumn/act-alumn.component.html
+++ b/src/app/alumno/view-group-alumn/act-alumn/act-alumn.component.html
@@ -16,7 +16,8 @@
     *ngIf="isModalOpen"
     [activityDetails]="selectedActivity"
     userType="alumno"
-    (close)="closeActivityModal()"
-  ></app-card-activity>
+    (close)="closeActivityModal()">
+  </app-card-activity>
+
   
   </div>
