--- a/src/app/alumno/home-alumno/home-alumno.component.html
+++ b/src/app/alumno/home-alumno/home-alumno.component.html
@@ -1,7 +1,13 @@
 <div class="min-h-screen bg-gray-100">
   <div class="flex justify-center p-8">
     <div class="grid gap-8 w-full grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-      <app-card-group subjectName="Ciencias II" userType="alumno"></app-card-group>
+      <app-card-group 
+        *ngFor="let group of groups"
+        [subjectName]="group.asignatura"
+        [userType]="'alumno'"
+        [grado]="group.grado"     
+        [grupo]="group.grupo"
+      ></app-card-group>
     </div>
   </div>
 </div>
