--- a/src/app/docente/home-docente/home-docente.component.html
+++ b/src/app/docente/home-docente/home-docente.component.html
@@ -14,4 +14,5 @@
 </div>
 
 <app-form-add-modal></app-form-add-modal>
+<app-form-update-modal></app-form-update-modal>
 <app-delete-modal></app-delete-modal>
