--- a/src/app/shared/modals/form-update-modal/form-update-modal.component.html
+++ b/src/app/shared/modals/form-update-modal/form-update-modal.component.html
@@ -1,1 +1,3 @@
-<p>form-update-modal works!</p>
+<div *ngIf="modalOpen" class="fixed inset-0 bg-gray-600 bg-opacity-50 flex justify-center items-center">
+    <app-update-group *ngIf="modalType === 'edit'"></app-update-group>
+</div>  
