--- a/src/app/docente/forms/add-contenido/add-contenido.component.html
+++ b/src/app/docente/forms/add-contenido/add-contenido.component.html
@@ -5,7 +5,8 @@
     </div>
 
     <div class="flex justify-between mb-6">
-      <button type="button" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838] mr-2">
+      <button type="button" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838] mr-2"
+      (click)="onAddContenidoIA()">
         Generar contenido
       </button>
       <button type="button" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838]" (click)="closeModal()">
