--- a/src/app/shared/modals/form-add-modal/form-add-modal.component.html
+++ b/src/app/shared/modals/form-add-modal/form-add-modal.component.html
@@ -3,6 +3,7 @@
     <app-add-group *ngSwitchCase="'group'"></app-add-group>
     <app-add-tarea *ngSwitchCase="'tarea'"></app-add-tarea>
     <app-add-contenido *ngSwitchCase="'contenido'"></app-add-contenido>
+    <app-add-contenido-ia *ngSwitchCase="'contenidoIA'"></app-add-contenido-ia>
     <div *ngSwitchDefault>Selecciona una opción válida</div>
   </div>
 </div>
