--- a/src/app/director/home-director/home-director.component.html
+++ b/src/app/director/home-director/home-director.component.html
@@ -1,9 +1,11 @@
-<div>
-    <div> 
-        <h2>Docentes</h2>
-    </div>
+<app-header (openAddDocenteModalEvent)="openAddDocenteModal()" (openProfileModalEvent)="openViewUsuarioModal()"></app-header>
 
-    <div>
-
-    </div>
+<div class="p-8">
+  <h1 class="text-3xl font-bold text-teal-600">Bienvenido Director</h1>
+  <p class="mt-4 text-lg">Gestiona los docentes y otras funcionalidades aquí.</p>
 </div>
+
+<app-add-docente-modal *ngIf="showAddDocenteModal" (closeModalEvent)="closeAddDocenteModal()"></app-add-docente-modal>
+<app-view-usuario-modal *ngIf="showViewUsuarioModal && selectedUserId !== null" [userId]="selectedUserId" (closeModalEvent)="closeViewUsuarioModal()"></app-view-usuario-modal>
+
+  
