--- a/src/app/alumno/view-group-alumn/act-alumn/act-alumn.component.html
+++ b/src/app/alumno/view-group-alumn/act-alumn/act-alumn.component.html
@@ -19,5 +19,11 @@
     (close)="closeActivityModal()">
   </app-card-activity>
 
+  <div class="fixed bottom-4 right-4 z-50">
+    <app-chatbot-alumn></app-chatbot-alumn>
+  </div>
+  
+
+
   
   </div>
