--- a/src/app/shared/cards/generic-card/generic-card.component.html
+++ b/src/app/shared/cards/generic-card/generic-card.component.html
@@ -18,7 +18,7 @@
   <div *ngIf="cardType === 'temario'" class="py-2 px-12">
     <div class="w-full flex items-center h-16 bg-white border-2 border-[#004C4C99] rounded-lg shadow-md relative">
       <div class="px-4 flex justify-start items-center rounded-lg">
-        <iframe class="text-lg font-semibold text-[#000000]">{{ cardData?.documento_pdf || 'Título del temario' }}</iframe>
+        <iframe class="text-lg font-semibold text-[#000000]">Temario{{ cardData?.id_temario || 'Título del temario' }}</iframe>
       </div>
       <div class="absolute bottom-4 right-4" *ngIf="userType !== 'alumno'">
         <img src="./menu_1.png" alt="menu de opciones" class="w-auto h-8">
