ADD DOCENTE FINISH

--- a/src/app/director/add-docente-modal/add-docente-modal.component.html
+++ b/src/app/director/add-docente-modal/add-docente-modal.component.html
@@ -24,9 +24,9 @@
       <input id="docenteContrasena" [(ngModel)]="docente.contrasena" name="contrasena" type="password" placeholder="Contraseña" class="w-full p-2 mt-1 mb-4 border border-gray-300 rounded-md">
 
       <div class="flex space-x-2">
-        <button type="submit" class="w-1/2 bg-teal-600 text-white py-2 rounded-md hover:bg-teal-700">Agregar</button>
-        <button type="button" (click)="closeModal()" class="w-1/2 bg-red-500 text-white py-2 rounded-md hover:bg-red-600">Cancelar</button>
-      </div>
+        <button type="submit" class="w-1/2 bg-[#004c4c] text-white py-2 rounded-md hover:bg-[#003636]">Agregar</button>
+        <button type="button" (click)="closeModal()" class="w-1/2 bg-[#004c4c] text-white py-2 rounded-md hover:bg-[#003636]">Cancelar</button>
+      </div>      
     </form>
   </div>
 </div>
