--- a/src/app/docente/view-group/view-activity/view-activity.component.html
+++ b/src/app/docente/view-group/view-activity/view-activity.component.html
@@ -7,12 +7,15 @@
   </div>
 
   <div class="w-10/12">
-    <app-generic-card 
-      *ngFor="let activity of activities" 
-      [cardData]="activity" 
-      cardType="activity" 
-      (openModal)="openActivityModal(activity)">
-    </app-generic-card>
+    <div class="w-10/12">
+      <app-generic-card 
+        *ngFor="let activity of activities" 
+        [cardData]="activity" 
+        cardType="activity" 
+        (openModal)="openActivityModal(activity)"
+        userType="docente">
+      </app-generic-card>
+    </div>    
   </div>
 
   <app-card-activity
