Visualizacion del contenido

--- a/src/app/shared/cards/card-activity/card-activity.component.html
+++ b/src/app/shared/cards/card-activity/card-activity.component.html
@@ -75,8 +75,10 @@
     <div *ngIf="activitySupportFile" class="mt-4">
       <!-- Mostrar archivo si es imagen -->
       <img *ngIf="isImage(activitySupportFile)" [src]="activitySupportFile" alt="Contenido de Apoyo" class="w-full h-auto mt-4" />
-      <!-- Mostrar archivo si es un documento o video -->
-      <iframe *ngIf="!isImage(activitySupportFile)" [src]="" class="w-full h-96" frameborder="0"></iframe>
+      
+      <!-- Mostrar archivo si es un PDF -->
+      <iframe *ngIf="isPdf(activitySupportFile)" [src]="activitySupportFileSafe" class="w-full h-96" frameborder="0"></iframe>
     </div>
   </div>
 </div>
+
